# g_resid_distrib

./: .gitignore  .localhistory  CMakeLists.txt  README.md  g_resid_distribConfig.cmake.in
src/: .localhistory  CMakeLists.txt  g_resid_distrib.hpp  g_resid_distrib_aux.cpp  g_residue_distribution.cpp
